# Interfaz-del-trabajo-final.py

./: README.md  main.cpp
physics/: Partícula.h
physics/physics/: Particula.cpp
physics/physics/physics/: Esfera.h
physics/physics/physics/physics/: Esfera.cpp
physics/physics/physics/physics/physics/: ObjetoCompartido.h
physics/physics/physics/physics/physics/physics/ui/: Panel.h
physics/physics/physics/physics/physics/physics/ui/ui/: CMakeLists.txt  Panel.cpp
